--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,12 @@
   </head>
 
   <body>
+<!--Обертка-->
     <div class="page-container">
+<!--хедер-->
       <header class="main-header-catalog">
-        <img src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        <img class="logo" src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+<!--меню пользователя-->
         <nav class="navigation navigation-menu-list">
           <ul class="navigation-list menu-list">
             <li class="navigation-item">
@@ -25,56 +28,58 @@
             </li>
           </ul>
         </nav>
+<!--меню пользователя-->
         <nav class="navigation navigation-user-list">
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <img class="serch" src="images/vector-files/serch.svg" alt="Поиск">
-              <span class="visually-hidden">
-                Поиск
-              </span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <img class="favorite" src="images/vector-files/heart.svg" alt="В Избранное">
-              <span class="visually-hidden">Избранное</span>
-              <div class="count-favorites">
-                <span class="count">12</span>
-              </div>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="link navigation-link button-brown" href="#">Хочу сюда!</a>
-          </li>
-        </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <img class="serch" src="images/vector-files/serch.svg" alt="Поиск">
+                <span class="visually-hidden">
+                  Поиск
+                </span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <img class="favorite" src="images/vector-files/heart.svg" alt="В Избранное">
+                <span class="visually-hidden">Избранное</span>
+                <div class="count-favorites">
+                  <span class="count">12</span>
+                </div>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="link navigation-link button-brown" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
         </nav>
-
       </header>
-
+<!--Каталог - мeйн-раздел-->
       <main class="main-catalog">
         <header class="inner-catalog">
-          <div class="catalog-wrapper">
 
+<!--фильтры-->
             <section class="main-filter-1">
               <h1 class="catalog-title">Гостиницы Седоны</h1>
+<!--хдебные крошки-->
               <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
-                  <span class="visually-hidden"><a class="breadcrumbs-link" href="index.html">Главная</a>
-                  </span>
+                <span class="visually-hidden breadcrumbs-link">
+                  <a class="breadcrumbs-link" href="index.html">Главная
+                </span>
+                    <img class="breadcrumbs-icon" src="images/vector-files/bread-crumbs-home.svg" width="13" height="14" alt="Домой">
+                  </a>
                 </li>
+
                 <li class="breadcrumbs-item">
-                  <span class="visually-hidden breadcrumbs-link">Гостиницы</span>
+                  <span class="breadcrumbs-link breadcrumbs-hotels">Гостиницы</span>
                 </li>
               </ul>
             </section>
-
+<!--форма подбора-->
             <section class="catalog-hotels">
-
               <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
-
-
                 <fieldset class="catalog-filter-group">
                   <legend class="catalog-filter-title">Инфраструктура</legend>
                   <ul class="catalog-filter-list">
@@ -133,20 +138,17 @@
                               не смогла разобраться с фильтрами до конца -->
 
 
-              <button class="button" type="submit">Применить</button>
-              <button class="button" type="reset">Сбросить</button>
-            </form>
+              <button class="button-apply" type="submit">Применить</button>
+              <button class="button-reset" type="reset">Сбросить</button>
+              </form>
             </section>
-          </div>
+
         </header>
-
-
+<!--сортировка результатов поиска-->
         <div class="results-wrapper">
           <section class="sort">
-
             <p>Найдено гостиниц: 38</p>
             <select class="select-control" aria-label="Сортировка">
-
               <option value="popular">Сначала популярное</option>
               <option value="cheap">Сначала дешёвое</option>
               <option value="expensive">Сначала дорогое</option>
@@ -161,8 +163,9 @@
               <span class="visually-hidden">Показать слайды</span>
             </a>
           </section>
-
+<!--Рузельтат поиска-->
           <div class="hotel-results">
+<!--Карточки отелей-->
             <ul class="product-list">
               <li class="product-card">
                 <a class="product-card-link" href="#">
@@ -170,39 +173,49 @@
                     alt="вид на звездное недо через ущелье">
                   <h3 class="product-card-item">Amara Resort & Spa</h3>
                 </a>
-                <span class="product-card-price">Гостиница от 4000 ₽</span>
-
+                <span class="product-card-price">Гостиница </span>
+                <span class="amount">от 4000 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
-                <button class="button">В Избранное</button>
-                <span class="reiting">Рейтинг 8,5</span>
-                <span class=" visually-hidden stars">4х-звездочный отель</span>
-                <!-- не разобралась с рейтингом -->
-              </li>
+                <button class="button button-favorite" type="button">В Избранное</button>
+                <span class="stars stars4">
+                  <span class=" visually-hidden">4х-звездочный отель</span>
+                </span>
+                <span class="reiting">
+                  Рейтинг:
+                  <span class="current-rating">8,5</span>
+                  </span>
+                </li>
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                  <img class="product-card-img" src="images/photos/villas-at-poco-diablo.jpg" width="300" height="212"
+                  <img class="product-card-img" src="images/photos/villas-at-poco-diablo-.jpg" width="300" height="212"
                     alt="вид на горы и радугу">
                   <h3 class="product-card-item">Villas at Poco Diablo</h3>
                 </a>
-                <span class="product-card-price">Гостиница от 5000 ₽</span>
+                <span class="product-card-price">Гостиница </span>
+                <span class="amount">от 5000 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
-                <button class="button">В избранном</button>
+                <button class="button-choosen button" type="button">В избранном</button>
+                <span class="stars stars4">
+                  <span class="visually-hidden">4х-звездочный отель</span>
+                </span>
                 <span class="reiting">Рейтинг 9,2</span>
-                <span class=" visually-hidden stars">4х-звездочный отель</span>
               </li>
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                  <img class="product-card-img" src="images/photos/desert-quail.jpg" width="300" height="212"
+                  <img class="product-card-img" src="images/photos/desert-quail1.jpg" width="300" height="212"
                     alt="вид на горы днем">
                   <h3 class="product-card-item">Desert Quail Inn</h3>
                 </a>
-                <span class="product-card-price">Гостиница от 2500 ₽</span>
+                <span class="product-card-price">Гостиница </span>
+                <span class="amount">от 2500 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
-                <button class="button">В избранное</button>
+                <button class="button-favorite button" type="button">В избранное</button>
+                <span class="stars stars3">
+                  <span class="visually-hidden">3х-звездочный отель</span>
+                </span>
                 <span class="reiting">Рейтинг 6,9</span>
-                <span class="visually-hidden stars">3х-звездочный отель</span>
               </li>
 
               <li class="product-card">
@@ -211,16 +224,19 @@
                     alt="вид на горы и ночное небо">
                   <h3 class="product-card-item">GreenTree Inn</h3>
                 </a>
-                <span class="product-card-price">Гостиница от 1500 ₽</span>
+                <span class="product-card-price">Гостиница </span>
+                <span class="amount">от 1500 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
-                <button class="button">В избранное</button>
+                <button class="button-favorite button" type="button">В избранное</button>
+                <span class="stars stars2">
+                  <span class=" visually-hidden">2х-звездочный отель</span>
+                </span>
                 <span class="reiting">Рейтинг 5</span>
-                <span class=" visually-hidden stars">2х-звездочный отель</span>
               </li>
             </ul>
           </div>
 
-
+<!--пагинация-->
           <section class="pagination-wrapper">
             <h2 class="visually-hidden">Пагинация</h2>
             <ol class="pagination">
@@ -245,7 +261,7 @@
             </ol>
           </section>
         </div>
-
+<!--форма подписи на рассылку-->
         <section class="subscribe-catalog">
           <h2>ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -259,49 +275,46 @@
           </form>
         </section>
       </main>
-
+<!--футер-->
       <footer class="main-footer">
         <div class="footer-general">
 
           <section class="footer-sosial">
-           <h3 class="visually-hidden">Социальные сети</h3>
-           <ul class="footer-sosial-list">
-             <li class="footer-sosial-item">
-               <a class="button" href="https://vk.com/htmlacademy">
-                 <span class="visually-hidden">Вконтакте</span>
-                 <img src="images/vector-files/vk.svg" alt="Вконтакте">
-               </a>
-             </li>
-             <li class="footer-sosial-item">
-               <a class="button" href="https://t.me/htmlacademy ">
-                 <span class="visually-hidden">Телеграм</span>
-                 <img src="images/vector-files/tg.svg" alt="Телеграм">
-               </a>
-             </li>
-             <li class="footer-sosial-item">
-               <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                 <span class="visually-hidden">Ютуб</span>
-                 <img src="images/vector-files/utube.svg" alt="Ютуб">
-               </a>
-             </li>
-           </ul>
-         </section>
-         <section class="contacts">
-           <h3 class="visually-hidden">Контакты</h3>
-         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-         </section>
-         <section class="footer-logo">
-           <h3 class="visually-hidden">Логотип</h3>
-           <span class="visually-hidden">Логотип</span>
-           <a href="https://htmlacademy.ru/">
-             <img src="images/vector-files/logo-htmlacademy.svg" alt="HTML-logo">
-           </a>
-         </section>
+            <h3 class="visually-hidden">Социальные сети</h3>
+            <ul class="footer-sosial-list">
+              <li class="footer-sosial-item">
+                <a class="button" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">Вконтакте</span>
+                  <img src="images/vector-files/vk.svg" alt="Вконтакте">
+                </a>
+              </li>
+              <li class="footer-sosial-item">
+                <a class="button" href="https://t.me/htmlacademy ">
+                  <span class="visually-hidden">Телеграм</span>
+                  <img src="images/vector-files/tg.svg" alt="Телеграм">
+                </a>
+              </li>
+              <li class="footer-sosial-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Ютуб</span>
+                  <img src="images/vector-files/utube.svg" alt="Ютуб">
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="contacts">
+            <h3 class="visually-hidden">Контакты</h3>
+            <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </section>
+          <section class="footer-logo">
+            <h3 class="visually-hidden">Логотип</h3>
+            <span class="visually-hidden">Логотип</span>
+            <a href="https://htmlacademy.ru/">
+              <img src="images/vector-files/logo-htmlacademy.svg" alt="HTML-logo">
+            </a>
+          </section>
         </div>
       </footer>
     </div>
-
-
   </body>
-
 </html>
